added delete logs
